change object name to table name

--- a/autodoc/style/template.html
+++ b/autodoc/style/template.html
@@ -11,7 +11,7 @@
         <thead>
             <tr>
                 <th>
-                    <font size="11">{{model.__name__}}</font>
+                    <font size="11">{{model._meta.db_table}}</font>
                 </th>
                 <th></th>
                 <th></th>
